	light-attenuation
	blend-mode
* changed from int's to symbols
	build_polygons
* changed pdata-set to pdata-set!
* changed pdata-get to pdata-ref
* (hint-lazy-parent) for building scenegraph subtrees which don't
  inherit transforms - this makes building skeletons which are controlled
  by the physics possible
* (blobby->poly) extracts the blobbies mesh into a polygon primitive
* (hint-box) fix
* huge text possible with auto livecoding zoom and tracking
* editor and repl fixes
* all error reporting goes to the repl
* new scratchpad font renderer, uses truetype fonts
* minimal unicode support added
* unified helpmap locales, added (set-help-locale!)
* added (help "sections") & section information with function lists

0.12

* now uses plt scheme
* fluxus scripts can be written and viewed from the drscheme IDE
* lots of new documentation
* split fluxus up into modular parts - a livecoding application called the 
  scratchpad and a collection of plt extensions for graphics, audio and osc.
* a new autogenerated documentation system and online help command
* new low-level renderer control, with support for multiple renderers,
  scenegraphs and physics worlds
* ported lots of application code into scheme modules
* removed the (edit) and (save-name) commands and added a minimal script 
  file browser interface to the scratchpad
* added (hint-depth-sort) for correctly ordering and rendering transparent
  objects

0.11

* glsl support with (shader) and (shader-set!)
* big (recalc-normals) speedup
* normals recalculated for primitives of type POLYGON
* (keys-down) returns vector of the ascii values of all keys pressed
* (key-special-pressed id) for cursor keys etc
* (keys-special-down) returns vector of all special keys pressed
* kick/twist static object crash fix
* save with text highlighted now actually really safe (saves all rather than 
  selection + random characters)
* immediate mode state fix
* fixed (hint-points) for polygons